--- a/app/src/main/res/layout/fragment_server_list.xml
+++ b/app/src/main/res/layout/fragment_server_list.xml
@@ -78,7 +78,8 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-        <ScrollView
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/recycler_view_items"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -86,136 +87,133 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout13">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/recycler_view_items"
+            <!--                <TextView-->
+            <!--                    android:id="@+id/textView10"-->
+            <!--                    android:layout_width="wrap_content"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:paddingStart="24dp"-->
+            <!--                    android:paddingTop="20dp"-->
+            <!--                    android:text="Default servers"-->
+            <!--                    android:textColor="#FFFFFF"-->
+            <!--                    android:textSize="20sp"-->
+            <!--                    app:layout_constraintStart_toStartOf="parent"-->
+            <!--                    app:layout_constraintTop_toTopOf="parent" />-->
+
+            <!--                <androidx.constraintlayout.widget.ConstraintLayout-->
+            <!--                    android:id="@+id/constraintLayout2"-->
+            <!--                    android:layout_width="0dp"-->
+            <!--                    android:layout_height="@dimen/_70sdp"-->
+            <!--                    android:layout_marginTop="10dp"-->
+            <!--                    android:visibility="visible"-->
+            <!--                    android:background="@drawable/background_black_card"-->
+            <!--                    app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                    app:layout_constraintHeight_percent="0.13"-->
+            <!--                    app:layout_constraintStart_toStartOf="parent"-->
+            <!--                    app:layout_constraintTop_toBottomOf="@+id/textView10"-->
+            <!--                    app:layout_constraintWidth_percent="0.92">-->
+
+            <!--                    <ImageView-->
+            <!--                        android:id="@+id/imageViewflag"-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:paddingHorizontal="20dp"-->
+            <!--                        android:src="@drawable/flag"-->
+            <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                        app:layout_constraintStart_toStartOf="parent"-->
+            <!--                        app:layout_constraintTop_toTopOf="parent" />-->
+
+            <!--                    <TextView-->
+            <!--                        android:id="@+id/flag_name"-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:paddingTop="13dp"-->
+            <!--                        android:text="@string/neatherland"-->
+            <!--                        android:textColor="@color/white"-->
+            <!--                        android:textSize="20sp"-->
+            <!--                        app:layout_constraintBottom_toTopOf="@+id/vpn_ip"-->
+            <!--                        app:layout_constraintStart_toEndOf="@+id/imageViewflag"-->
+            <!--                        app:layout_constraintTop_toTopOf="parent" />-->
+
+            <!--                    <TextView-->
+            <!--                        android:id="@+id/vpn_ip"-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:text="51 . 178 . 82 . 56"-->
+            <!--                        android:textColor="#8F8F8F"-->
+            <!--                        app:layout_constraintStart_toEndOf="@+id/imageViewflag"-->
+            <!--                        app:layout_constraintTop_toBottomOf="@+id/flag_name" />-->
+
+            <!--                    <RadioButton-->
+            <!--                        android:id="@+id/radio"-->
+            <!--                        android:layout_marginEnd="20dp"-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:clickable="true"-->
+            <!--                        android:buttonTint="@color/selected"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                        app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                        app:layout_constraintTop_toTopOf="parent"-->
+            <!--                        android:focusable="true" />-->
+
+            <!--                    <ImageView-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:paddingEnd="15dp"-->
+            <!--                        android:src="@drawable/ic_signal"-->
+            <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                        app:layout_constraintEnd_toStartOf="@+id/radio"-->
+            <!--                        app:layout_constraintTop_toTopOf="parent" />-->
+
+
+            <!--                </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="24dp"
+                android:paddingTop="20dp"
+                android:text="Premium servers"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent="0.4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
-<!--                <TextView-->
-<!--                    android:id="@+id/textView10"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:paddingStart="24dp"-->
-<!--                    android:paddingTop="20dp"-->
-<!--                    android:text="Default servers"-->
-<!--                    android:textColor="#FFFFFF"-->
-<!--                    android:textSize="20sp"-->
-<!--                    app:layout_constraintStart_toStartOf="parent"-->
-<!--                    app:layout_constraintTop_toTopOf="parent" />-->
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="24dp"
+                android:paddingTop="20dp"
+                android:text="Free servers"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
 
-<!--                <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--                    android:id="@+id/constraintLayout2"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="@dimen/_70sdp"-->
-<!--                    android:layout_marginTop="10dp"-->
-<!--                    android:visibility="visible"-->
-<!--                    android:background="@drawable/background_black_card"-->
-<!--                    app:layout_constraintEnd_toEndOf="parent"-->
-<!--                    app:layout_constraintHeight_percent="0.13"-->
-<!--                    app:layout_constraintStart_toStartOf="parent"-->
-<!--                    app:layout_constraintTop_toBottomOf="@+id/textView10"-->
-<!--                    app:layout_constraintWidth_percent="0.92">-->
-
-<!--                    <ImageView-->
-<!--                        android:id="@+id/imageViewflag"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:paddingHorizontal="20dp"-->
-<!--                        android:src="@drawable/flag"-->
-<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                        app:layout_constraintStart_toStartOf="parent"-->
-<!--                        app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/flag_name"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:paddingTop="13dp"-->
-<!--                        android:text="@string/neatherland"-->
-<!--                        android:textColor="@color/white"-->
-<!--                        android:textSize="20sp"-->
-<!--                        app:layout_constraintBottom_toTopOf="@+id/vpn_ip"-->
-<!--                        app:layout_constraintStart_toEndOf="@+id/imageViewflag"-->
-<!--                        app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/vpn_ip"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="51 . 178 . 82 . 56"-->
-<!--                        android:textColor="#8F8F8F"-->
-<!--                        app:layout_constraintStart_toEndOf="@+id/imageViewflag"-->
-<!--                        app:layout_constraintTop_toBottomOf="@+id/flag_name" />-->
-
-<!--                    <RadioButton-->
-<!--                        android:id="@+id/radio"-->
-<!--                        android:layout_marginEnd="20dp"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:clickable="true"-->
-<!--                        android:buttonTint="@color/selected"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                        app:layout_constraintEnd_toEndOf="parent"-->
-<!--                        app:layout_constraintTop_toTopOf="parent"-->
-<!--                        android:focusable="true" />-->
-
-<!--                    <ImageView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:paddingEnd="15dp"-->
-<!--                        android:src="@drawable/ic_signal"-->
-<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                        app:layout_constraintEnd_toStartOf="@+id/radio"-->
-<!--                        app:layout_constraintTop_toTopOf="parent" />-->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview2"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintHeight_percent="0.4"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
 
-<!--                </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="24dp"
-                    android:paddingTop="20dp"
-                    android:text="Premium servers"
-                    android:textColor="#FFFFFF"
-                    android:textSize="20sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHeight_percent="0.7"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView11" />
-
-                <TextView
-                    android:id="@+id/textView12"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="24dp"
-                    android:paddingTop="20dp"
-                    android:text="Free servers"
-                    android:textColor="#FFFFFF"
-                    android:textSize="20sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerview2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </ScrollView>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
