--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -110,6 +110,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Switch
+                android:id="@+id/autoconnectswitch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:track="@drawable/checked_switch"
@@ -164,6 +165,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
             <Switch
+                android:id="@+id/killswitchconnect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:track="@drawable/checked_switch"
@@ -205,6 +207,7 @@
                 app:layout_constraintStart_toEndOf="@+id/connection1"
                 app:layout_constraintTop_toTopOf="parent" />
             <Switch
+                android:id="@+id/improve"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:track="@drawable/checked_switch"
@@ -245,6 +248,7 @@
                 app:layout_constraintStart_toEndOf="@+id/save1"
                 app:layout_constraintTop_toTopOf="parent" />
             <Switch
+                android:id="@+id/savedata"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:track="@drawable/checked_switch"
