--- a/app/src/main/res/layout/fragment_split_tunning.xml
+++ b/app/src/main/res/layout/fragment_split_tunning.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#141414"
-        tools:context=".ui.menu.SplitTunningFragment">
+        tools:context=".Fragments.menu.SplitTunningFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/splittunning"
